# CSC410_grid1

./: CMakeLists.txt  README.md  checker.c  checker.h  grid.c  grid.h  main.c  parallel.c  parallel.h
